system/log-system/opensearch/opensearch_dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboard
spec:
  selector:
    matchLabels:
      k8s-app: opensearch-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: opensearch-dashboard
    spec:
      containers:
        - name: opensearch-dashboard
          image: opensearchproject/opensearch-dashboards:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboard
  labels:
    k8s-app: opensearch-dashboard
spec:
  type: ClusterIP
  selector:
    k8s-app: opensearch-dashboard
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
      nodePort: 30002
