system/log-system/opensearch/httproute_dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opensearch-dashboard-httproute
spec:
  hostnames:
    - opensearch-dashboard.jyo-liar.com
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opensearch-dashboard
          port: 5601
